2013-09-24  Per Bothner  <per@bothner.com>

	* srfi-38-test.scm: Update - datum labels now start at 0.

2013-09-23  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST ): Belatedly add r7rs-tests.scm.

2013-09-21  Matthieu Vachon  <matthieu.o.vachon@gmail.com>

	* sva40077.scm: New test based on Savannah bug#40077 "Boolean
	logical `not` on float number can result in ClassCastException".

22013-09-22  Per Bothner  <per@bothner.com>

	* command1.scm, commands2.scm, command3.scm: New tests to
	check behavior of (command-line).
	* Makefile.am: Update accordingly.

2013-09-10  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
	    Per Bothner  <per@bothner.com>

	* sva39940.scm: New test based on Savannah bug#39940
	"Class member of type <procedure> compilation exception".
	Also some variations.

2013-09-07  Per Bothner  <per@bothner.com>

	* sva39947.scm: Added testcase for Savannah bug #39947
	"Bad resolution of java.util.HashSet.addAll()".
	* Makefile.am: Updated accordingly.

	* sva39945.scm: New testcase for Savannah bug #39945: "Too few
	arguments" warning when declaring an anonymous class in a let block"

2013-09-06  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Port to Kawa.  Disable or mark as fail-expected
	functionality that doesn;t (yet) work on Kawa.
	* Makefile.am: Update accordingly.

	* misc-test.scm (make-mf): Update since string<? is now less
	lenient.

	* srfi-38-test.scm: Use write-shared to match R7RS semantics.

2013-09-05  Per Bothner  <per@bothner.com>

	* lib-test.scm: Fix thinko in bytevector constructor.

2013-09-04  Per Bothner  <per@bothner.com>

	* mac-test.scm: New test for Savannah bug #39946
	"NullPointerException when using syntax->datum".

	* misc-test.scm: New test-case from Savannah bug report #39944
	"Possible bug with omitted keyword arguments" which currently passes.

2013-08-25  Per Bothner  <per@bothner.com>

	* misc-test.scm: Add test that '#' is a terminator.

2013-07-26  Per Bothner  <per@bothner.com>
